elb/alb/template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: An ALB serving up a web server
Parameters:
  InstanceType:
    Type: String
    Default: t2.micro
  VpcId:
    Type: String
    Default: vpc-08f0ec02f7471b018
  ImageId:
    Type: String
    Default: ami-003c24b59bb839e19
  SubnetIdA:
    Type: String
    Default: subnet-0d8058cb02f147a86
  SubnetIdB:
    Type: String
    Default: subnet-0e0fd31733061237d
Resources:
  Alb:
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-loadbalancer.html
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      # Name: String
      Type: application 
      IpAddressType: ipv4
      Scheme: internet-facing
      Subnets: 
        - !Ref SubnetIdA
        - !Ref SubnetIdB
        
      # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-loadbalancer-loadbalancerattribute.html
      SecurityGroups: 
        - !Ref AlbSg
  AlbSg:
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-securitygroup.html
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALB SG
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
  #HTTPlistener:
  #  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listener.html
  #  Type: "AWS::ElasticLoadBalancingV2::Listener"
  #  Properties:
  #    DefaultActions:
  #      - Type: "redirect"
  #        RedirectConfig:
  #          Protocol: "HTTPS"
  #          Port: 443
  #          Host: "#{host}"
  #          Path: "/#{path}"
  #          Query: "#{query}"
  #          StatusCode: "HTTP_301"
  #    LoadBalancerArn: !Ref Alb
  #    Port: 80
  #    Protocol: "HTTP"
  #HTTPSlistener:
  #  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listener.html
  #  Type: "AWS::ElasticLoadBalancingV2::Listener"
  #  Properties:
  #    DefaultActions:
  #      - Type: forward
  #        TargetGroupArn: !Ref TargetGroup
  #    Port: 443
  #    Protocol: HTTPS
  #    LoadBalancerArn: !Ref Alb
  HTTPlistener:
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listener.html
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup
      Port: 80
      Protocol: HTTP
      LoadBalancerArn: !Ref Alb
  TargetGroup:
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckEnabled: true
      HealthCheckPath: "/"
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Port: 80
      Protocol: HTTP
      VpcId: !Ref VpcId
      TargetType: instance
      Targets:
        - Id: !Ref WebServer
          Port: 80
  SSMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref SSMRole
  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-instance.html
  WebServer: 
    Type: AWS::EC2::Instance
    Properties: 
      IamInstanceProfile: !Ref EC2InstanceProfile
      InstanceType: !Ref InstanceType
      ImageId: !Ref ImageId
      NetworkInterfaces:
        - DeviceIndex: 0
          SubnetId: !Ref SubnetIdA
          AssociatePublicIpAddress: true
          GroupSet:
            - !GetAtt WebSG.GroupId
          DeleteOnTermination: true
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "<html><body><h1>Hello from Apache on Amazon Linux 2!</h1></body></html>" > /var/www/html/index.html
  WebSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: -1
          SourceSecurityGroupId: !Ref AlbSg
          FromPort: 80
          ToPort: 80
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
